# inventree_ordercalculator

./: .dockerignore  .env.example  .gitignore  .roomodes  CHANGELOG.md  Dockerfile  README.md  Specification.md  code_documentation_compliance_review_report.md  debug_api.py  debug_app_flow.py  docker-compose.yml  dummy_presets.json  main.py  presets.json  pyproject.toml  simple_test.py  test_legacy_building.py  test_part_2081.py
.taskmaster/: config.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
data/: .gitkeep
docs/: EMAIL_NOTIFICATIONS.md  bom_optional_column_implementation_plan.md  calculation_explanation.md  documentation_compliance_checklist.md  documentation_compliance_review_report.md  google_styleguide_best_practices.md  inventree_api_bom_optional.md  optional_parts_hiding_implementation_plan.md  technical_documentation_optional_column.md
docs/architecture/: automated_monitoring_architecture.md  presets_feature_architecture.md
docs/feature_specs/: 07_streamlit_ui_spec.md  automated_monitoring_spec.md
docs/pseudocode/: 03_api_client_pseudocode.md  04_calculator_pseudocode.md  streamlit_presets_ui_pseudocode.md
research/01_initial_queries/: 01_scope_definition.md  02_key_questions.md  (+1 more)
tests/: test_api_client.py  test_calculator.py  test_cli.py  test_config.py  test_email_config.py  test_email_formatter.py  test_email_integration.py  test_email_scheduler.py  test_email_sender.py  test_email_service.py  test_models.py  test_monitoring_service.py  test_presets_manager.py  test_streamlit_app.py
(+40 files in other folders)
