[project]
name = "inventree-order-calculator-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "apscheduler>=3.11.0",
    "inventree>=0.17.5",
    "pydantic[email]>=2.11.4",
    "pytest-mock>=3.14.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "streamlit>=1.45.0",
    "typer>=0.15.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0", # Added pytest-mock
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--import-mode=importlib"
